tests/regression/errors/basic/type_error_13.csd
// Type error test 13
sus number drip = 13
sus text tea = "string_13"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 13:", wrong)
